# QuantumSim

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  Untitled Diagram.drawio  a.out  main.cpp  plot.cpp  test  test.cpp  tototot.cpp
.old_architecture/code/: alias.h  code.h
.old_architecture/code/QuanCirc/inc/: error.h
.old_architecture/code/QuanCirc/inc/algorithms/: circuit_builders.h
.old_architecture/inc/: qubits.h
.old_architecture/inc/QiskitProvider/: python.h
.old_architecture/inc/QuantumCircuit/: instruction.h  quantumcircuit.h
.old_architecture/inc/random/: genfactory.h
bulid/: CMakeCache.txt
code/: code.h
code/QuanCirc/inc/: error.h  quantumcircuit.h  random_qc.h
code/QuanCirc/inc/quantumcirc/: QC.h  ps.h  quantumcircuit.h  random_qc.h  unitary.h
code/QuanCirc/inc/tensors/: alias.h  bin_utils.h  tensor.h
code/QuanCirc/src/: error.cpp  quantumcircuit.cpp  random_qc.cpp
code/QuanCirc/src/quantumcirc/: ps.cpp  quantumcircuit.cpp  random_qc.cpp  unitary.cpp
code/QuanCirc/src/random/: genfactory.cpp
code/QuanCirc/src/tensors/: bin_utils.cpp  matrix_exp.cpp  tensor.cpp
code/algorithms/: grover.cpp  parser.cpp  qaoa.cpp
ext_sources/.old_architecture/: CMakeLists.txt
ext_sources/.old_architecture/code/QuanCirc/inc/algorithms/: grover.h  random_qc.h
ext_sources/.old_architecture/code/QuanCirc/inc/quantumcirc/: QC.h  quantumcircuit.h  qubits.h
ext_sources/.old_architecture/code/QuanCirc/inc/tensors/: tensor.h
ext_sources/.old_architecture/code/QuanCirc/src/algorithms/: random_qc.cpp
ext_sources/.old_architecture/code/QuanCirc/src/tensors/: bin_utils.cpp
ext_sources/.old_architecture/inc/GateSimulator/: tensorprovider.h
ext_sources/.old_architecture/inc/QuantumCircuit/: metaprovider.h
ext_sources/.old_architecture/inc/QuantumCircuit/algorithms/: random_qc.h
ext_sources/.old_architecture/inc/Tensors/: old_shape.h  old_tensor.h  shape.h
ext_sources/.old_architecture/test/QuanCirc/inc/algorithms/: grover_test.h
ext_sources/.old_architecture/test/QuanCirc/inc/tensors/: test_tensor.h
ext_sources/.old_architecture/test/QuanCirc/src/tensors/: test_tensor.cpp
ext_sources/Eigen/src/Core/: Dot.h
ext_sources/Eigen/src/Eigenvalues/: HessenbergDecomposition.h
inc/: errors.h  parameter.h  qubits.h  stddata.h
inc/Fisher_expression_templates/: expression.h  main  main.cpp  matrix.h  sum.h  transpose.h
inc/GateSimulator/: __init__.h  puresim.h  simdata.h  stddata.h  tensorprovider.h  tensorspec.h  unitary.h
inc/GateSimulator/algorithms/: grover.h  random_qc.h
inc/QiskitProvider/: qiskitprovider.h
inc/QuantumCircuit/: Instruction.h  __init__.h  drawer.h  instruction.h  magicinstruction.h  metadata.h  metaprovider.h  quantumcircuit.h
inc/QuantumCircuit/algorithms/: grover.h
inc/Tensors/: __init__.h  bin_utils.h  old_tensorexpr.h  shape.h  stddata.h  tensor.h  tensorexpr.h
quanlib/: CMakeLists.txt  main.cpp
quanlib/bin_test/: test_gatesim  test_grover
quanlib/include/quantumcircuit/: common.h
quanlib/include/quantumcircuit/providers/: gatesim.h
quanlib/src/: CMakeListstoto.txt  common.h  parameter.cpp
quanlib/src/GateSimulator/: CMakeLists.txt  gatesim.h  gatesimulator.cpp  tensorspec.h
quanlib/src/GateSimulator/include/: tensorprovider.h  tensorspec.h
quanlib/src/Parameters/: parameter.h
quanlib/src/QiskitSimulator/: CMakeLists.txt  main.cpp  main.py  pybind.cpp  pybind.h  qiskit_provider.h  qiskit_simulator.h
quanlib/src/QuantumCircuit/: CMakeLists.txt  QuantumCircuit.h  instruction.h  metaprovider.h  quantumcircuit.cpp
quanlib/src/QuantumCircuit/include/: instruction.h  metaprovider.h
quanlib/src/Qubits/: CMakeLists.txt  qubits.cpp
quanlib/src/QulacsSimulator/: CMakeLists.txt  qulacs_wrapper.h  qulacssim.h  qulacssum.cpp
quanlib/src/StateSimulator/: CMakeLists.txt  gatesim.h  gatesimulator.cpp  shots_provider.h  state_evolve.h  tensorprovider.h  tensorspec.h
quanlib/src/Tensors/: CMakeLists.txt  tensor.h  tensorexpr.h  tensors.cpp
quanlib/src/Tensors/include/: shape.h  tensor.h  tensorexpr.h
quanlib/src/Utils/: CMakeLists.txt  common.cpp  common.h  python_singleton.h  q_errors.h
quanlib/src/VQE/: CMakeLists.txt  vqe.h
quanlib/src/algorithms/: BaseMatrix.h  CMakeLists.txt  Grover.h  genfactory.h  grover.cpp  qaoa.cpp  qaoa.h  random_qc.cpp  random_qc.h  transpilers.cpp  transpilers.h
quanlib/src/random/: CMakeLists.txt  genfactory.cpp  genfactory.h
quanlib/src/random/numgenerator/: basegen.h  lcg.cpp
quanlib/tests/: CMakeLists.txt  common_test.h
quanlib/tests/GateSimulator/: CMakeLists.txt  test_gatesim.cpp  test_gatesim.h  test_state_evolve.cpp  test_state_evolve.h
quanlib/tests/QuantumCircuit/: CMakeLists.txt  test_qc_interface.cpp  test_qc_interface.h
quanlib/tests/Tensors/: CMakeLists.txt  test_crtp.cpp  test_crtp.h  test_datatensor.h
quanlib/tests/VQE/: CMakeLists.txt  test_vqe.cpp  test_vqe.h
quanlib/tests/algorithms/: CMakeLists.txt  grover_test.cpp  grover_test.h  random_qc_test.cpp  random_qc_test.h
src/: parameter.cpp  qubits.cpp
src/GateSimulator/: gatesimulator.cpp
src/GateSimulator/algorithms/: random_qc.cpp
src/QuantumCircuit/: quantumcircuit.cpp
src/QuantumCircuit/algorithms/: grover.cpp  random_qc.cpp
src/Tensors/: old_tensors.cpp  tensors.cpp
src/random/: genfactory.cpp
test/: common_test.h
test/QuanCirc/inc/: quantumcircuit.h
test/QuanCirc/inc/tensors/: test_bin_utils.h  test_tensor.h
test/QuanCirc/src/: quantumcircuit.cpp  random_qc.cpp
test/QuanCirc/src/quantumcirc/: test_qc.cpp
test/QuanCirc/src/tensors/: eigen_impl.cpp  matrix_exp.cpp  test_bin_utils.cpp  test_tensor.cpp
test/algorithms/: grover_test.cpp  grover_test.h
tests/GateSimulator/: test_gatesim.cpp  test_gatesim.h
tests/GateSimulator/algorithms/: grover_test.cpp  grover_test.h  random_qc_test.cpp  random_qc_test.h
tests/QuantumCircuit/: test_qc_interface.cpp  test_qc_interface.h
tests/QuantumCircuit/algorithms/: grover_test.cpp  grover_test.h  random_qc_test.cpp
tests/Tensors/: test_crtp.cpp  test_crtp.h  test_datatensor.cpp  test_datatensor.h
(+27 files in other folders)
