set(CMAKE_INCLUDE_CURRENT_DIR True)

add_executable(test_grover)
add_executable(test_random ${CMAKE_CURRENT_LIST_DIR}/random_qc_test.cpp)
target_link_libraries(test_grover quan)
target_link_libraries(test_random quan)
target_sources(test_grover PRIVATE ${CMAKE_CURRENT_LIST_DIR}/grover_test.cpp)    
# target_sources(test_random PRIVATE ${CMAKE_CURRENT_LIST_DIR}/.cpp)    
target_include_directories(test_grover PUBLIC ${QC_SOURCE_PATH} ${GS_SOURCE_PATH})
target_include_directories(test_random PUBLIC ${QC_SOURCE_PATH} ${GS_SOURCE_PATH} ${RD_SOURCE_PATH} ${ALG})
